--- a/css/styles.css
+++ b/css/styles.css
@@ -159,7 +159,7 @@ sup {
 }
 
 a {
-  color: #001226;
+  color: #bd5d38;
   text-decoration: none;
   background-color: transparent;
 }
@@ -436,7 +436,7 @@ small,
 mark,
 .mark {
   padding: 0.2em;
-  background-color: #fcf8e3;
+  background-color: #001226;
 }
 
 .list-unstyled {
