--- a/css/myresume.css
+++ b/css/myresume.css
@@ -27,8 +27,8 @@ p.lead {
 
 .bg-primary {
 	background-color:  #001226!
-	background-image: url(../assets/img/always-grey.png);
-/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+	background-image: url(../assets/img/60-lines(1));
+ 
 }
 
 .text-primary {
